# NewKernel

./: .gitignore  CMakeLists.txt  Makefile  README  a  b  bochsout.txt  bochsrc.bxrc  c  kernel.ld  makehead
isodir/boot/grub/: grub.cfg
scripts/: symbols
src/arch/: Makefile  init_cpu.asm  init_cpu.c
src/arch/x86/: gdt.c  idt.asm  idt.c  irq.c  x86.asm
src/boot/: Makefile  boot.asm  loader.asm  loader.c
src/include/: alloc.h  asm.h  ata.h  chr.h  devfs.h  device.h  elf.h  exec.h  ext2.h  fbase.h  gdt_tool.h  idt.h  init.h  init_cpu.h  initramfs.h  io.h  ipc.h  keymap.h  mm.h  multiboot.h  paging.h  process.h  sched.h  sys.h  sys_call.h  task.h  type.h  usr.h  vfs.h
src/include/devices/: ata.h  device.h  serial.h
src/include/devices/graphics/: vga.h
src/include/devices/pci/: pci.h
src/include/elf/: elf.h
src/include/fs/: devfs.h  vfs.h
src/include/fs/ext2/: ext2.h
src/include/init/: init.h
src/include/io/: io.h  vga.h
src/include/itr/: itr.h  pic.h
src/include/mm/: mm.h  paging.h  string.h  symbols.h
src/include/sched/: exec.h  proc.h  sched.h
src/include/sys/: file.h  sys.h  sys_call.h  sys_table.h
src/include/video/: chr.h  print.h
src/include/x86/: gdt.h  idt.h  irq.h
src/kernel/: Makefile  chr.c  entry.asm  main.c  test.sh
src/kernel/devices/: ata.asm  ata.c  device.c  ramdev.c  serial.c
src/kernel/devices/graphics/: en_font.c  modes.c  vga.asm  vga.c
src/kernel/devices/pci/: pci.c
src/kernel/fs/: vfs.c
src/kernel/fs/ext2/: ext2.c
src/kernel/fs2/: devfs.c  fsman.c  initramfs.c
src/kernel/graphics/: graphics.c  graphics.h
src/kernel/init/: init.c
src/kernel/io/: cmode.c  io.c  vga.c
src/kernel/itr/: itr.c  itr.h  pic.c
src/kernel/mm/: alloc.c  mm.asm  mm.c  paging.c  string.c  symbols.c
src/kernel/sched/: elf.c  exec.c  proc.c  sched.asm  sched.c
src/kernel/sys/: file.c  ipc.c  process.c  sys.asm  sys.c  sys_call.c
src/kernel/tools/: gdt_tool.c
src/kernel/video/: chr.c  print.c
src/libc/: Makefile  build_main.sh  main.c
src/libc/gcc/: Makefile  crtbegin.c  crtbegin.h  crtend.c  crtend.h
src/libc/inc/: alloc.h  file.h  print.h  stdio.h  stdlib.h  sys.h  type.h
src/libc/src/: alloc.c  file.c  print.c  stdio.c  stdlib.c  string.c  sys.c
src/scripts/: symbols
src/usr/: task.c  usr.asm  usr.c
src/usr/src/: ls.c
tools/: cmd.txt  qemu_run.bat  quit  run.bat  run_mac.bat  vhd.go  wrun.bat
